--- a/StockPrediction/StockPrediction.csproj
+++ b/StockPrediction/StockPrediction.csproj
@@ -72,6 +72,7 @@
     <Compile Include="LinearRegreassionExampleFromGit.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="YahooWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
