--- a/StockPrediction/StockPrediction.csproj
+++ b/StockPrediction/StockPrediction.csproj
@@ -73,6 +73,7 @@
     <Compile Include="CsvReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SomeClass.cs" />
     <Compile Include="Stock.cs" />
     <Compile Include="YahooWrapper.cs" />
   </ItemGroup>
