--- a/StockPrediction/StockPrediction.csproj
+++ b/StockPrediction/StockPrediction.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stock.cs" />
+    <Compile Include="Trainer.cs" />
     <Compile Include="YahooWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
