--- a/StockPrediction/StockPrediction.csproj
+++ b/StockPrediction/StockPrediction.csproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CsvReader.cs" />
+    <Compile Include="DataContainer.cs" />
     <Compile Include="Predictor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
