--- a/StockPrediction/packages.config
+++ b/StockPrediction/packages.config
@@ -6,5 +6,6 @@
   <package id="Accord.Extensions.Statistics" version="3.0.1" targetFramework="net461" />
   <package id="Accord.Math" version="3.6.0" targetFramework="net461" />
   <package id="Accord.Statistics" version="3.6.0" targetFramework="net461" />
-  <package id="DotImaging.Primitives2D" version="2.5.3" targetFramework="net461" />
+  <package id="coveralls.io" version="1.3.4" targetFramework="net461" />
+  <package id="DotImaging.Primitives2D" version="4.8.3" targetFramework="net461" />
 </packages>
