--- a/StockPredictionUT/packages.config
+++ b/StockPredictionUT/packages.config
@@ -2,6 +2,5 @@
 <packages>
   <package id="Castle.Core" version="4.1.1" targetFramework="net461" />
   <package id="Moq" version="4.7.99" targetFramework="net461" />
-  <package id="MSTest.TestAdapter" version="1.1.11" targetFramework="net461" />
-  <package id="MSTest.TestFramework" version="1.1.11" targetFramework="net461" />
+  <package id="NUnit" version="3.7.1" targetFramework="net461" />
 </packages>
