--- a/StockPredictionUT/StockPredictionUT.csproj
+++ b/StockPredictionUT/StockPredictionUT.csproj
@@ -51,7 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="StockTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
