--- a/StockPredictionUT/StockPredictionUT.csproj
+++ b/StockPredictionUT/StockPredictionUT.csproj
@@ -58,6 +58,12 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\StockPrediction\StockPrediction.csproj">
+      <Project>{b3e5131c-b886-4256-8ce0-68d77a9cbbe9}</Project>
+      <Name>StockPrediction</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
