--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - nuget install NUnit.Runners -Version 3.6.1 -OutputDirectory testrunner
 script:
   - xbuild /p:Configuration=Release StockPrediction.sln
-  - mono ./testrunner/NUnit.Runners.3.6.1/tools/nunit3-console.exe ./StockPredictionUT/bin/Release/StockPredictionUT.dll
+  - mono ./testrunner/NUnit.ConsoleRunner.3.6.1/tools/nunit3-console.exe ./StockPredictionUT/bin/Release/StockPredictionUT.dll
   
 notifications:
   email:
