--- a/StockPredictionUT/StockPredictionUT.csproj
+++ b/StockPredictionUT/StockPredictionUT.csproj
@@ -54,6 +54,7 @@
     <Compile Include="StockTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
