--- a/StockPredictionUT/packages.config
+++ b/StockPredictionUT/packages.config
@@ -11,4 +11,7 @@
   <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net461" />
   <package id="NUnit.Extension.VSProjectLoader" version="3.6.0" targetFramework="net461" />
   <package id="NUnit.Runners" version="3.7.0" targetFramework="net461" />
+  <package id="SpecFlow" version="2.1.0" targetFramework="net461" />
+  <package id="SpecRun.Runner" version="1.6.0" targetFramework="net461" />
+  <package id="SpecRun.SpecFlow.2-1-0" version="1.6.0" targetFramework="net461" />
 </packages>
