--- a/StockPredictionUT/packages.config
+++ b/StockPredictionUT/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Castle.Core" version="4.1.1" targetFramework="net461" />
   <package id="Moq" version="4.7.99" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="NUnit" version="3.7.1" targetFramework="net461" />
   <package id="NUnit.Console" version="3.7.0" targetFramework="net461" />
   <package id="NUnit.ConsoleRunner" version="3.7.0" targetFramework="net461" />
@@ -11,7 +12,4 @@
   <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net461" />
   <package id="NUnit.Extension.VSProjectLoader" version="3.6.0" targetFramework="net461" />
   <package id="NUnit.Runners" version="3.7.0" targetFramework="net461" />
-  <package id="SpecFlow" version="2.1.0" targetFramework="net461" />
-  <package id="SpecRun.Runner" version="1.6.0" targetFramework="net461" />
-  <package id="SpecRun.SpecFlow.2-1-0" version="1.6.0" targetFramework="net461" />
 </packages>
