--- a/StockPredictionFeautres/App.config
+++ b/StockPredictionFeautres/App.config
@@ -5,6 +5,9 @@
   </configSections>
   
   
+  
 <specFlow>
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-  </specFlow></configuration>
+  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><!-- use unit test provider SpecRun+NUnit or SpecRun+MsTest for being able to execute the tests with SpecRun and another provider --><unitTestProvider name="SpecRun" /><plugins>
+      <add name="SpecRun" />
+    </plugins></specFlow></configuration>
