--- a/StockPredictionFeautres/packages.config
+++ b/StockPredictionFeautres/packages.config
@@ -5,4 +5,6 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="NUnit" version="3.7.1" targetFramework="net461" />
   <package id="SpecFlow" version="2.2.0" targetFramework="net461" />
+  <package id="SpecRun.Runner" version="1.6.0" targetFramework="net461" />
+  <package id="SpecRun.SpecFlow.2-2-0" version="1.6.0" targetFramework="net461" />
 </packages>
