--- a/StockPredictionFeautres/packages.config
+++ b/StockPredictionFeautres/packages.config
@@ -4,6 +4,7 @@
   <package id="MSTest.TestFramework" version="1.1.11" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="NUnit" version="3.7.1" targetFramework="net461" />
+  <package id="NUnit.Console" version="3.7.0" targetFramework="net461" />
   <package id="NUnit.ConsoleRunner" version="3.7.0" targetFramework="net461" />
   <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net461" />
   <package id="NUnit.Extension.NUnitV2Driver" version="3.6.0" targetFramework="net461" />
